--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -1,1 +1,19 @@
-front...
+<!DOCTYPE html>
+<html ng-app="sampleApp">
+
+  {% include head.html %}
+
+  <body ng-controller="sampleCtrl">
+    <div id="page" class="hfeed site">
+
+    {% include masthead.html %}
+
+    {% include hero_front.html %}
+
+    {% include content.html %}
+
+    {% include footer.html %}
+
+    </div>
+  </body>
+</html>
