--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,1 +1,16 @@
--- head
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
+  <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
+  <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico">
+  <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "/css/app.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "/css/custom.css" | prepend: site.baseurl }}">
+  <!--[if lt IE 9]>
+    <script type="text/javascript" src="/assets/js/html5shiv.min.js"></script>
+    <script type="text/javascript" src="/assets/js/respond.min.js"></script>
+  <![endif]-->
+  <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
+  <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+</head>
