--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,9 +4,9 @@
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
   <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico">
-  <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
-  <link rel="stylesheet" href="{{ "/css/app.css" | prepend: site.baseurl }}">
-  <link rel="stylesheet" href="{{ "/css/custom.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "/assets/css/github-dark.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "/assets/css/print.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "/assets/css/sylesheet.css" | prepend: site.baseurl }}">
   <!--[if lt IE 9]>
     <script type="text/javascript" src="/assets/js/html5shiv.min.js"></script>
     <script type="text/javascript" src="/assets/js/respond.min.js"></script>
