--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,7 @@
   <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico">
   <link rel="stylesheet" href="{{ "/assets/css/github-dark.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "/assets/css/print.css" | prepend: site.baseurl }}">
-  <link rel="stylesheet" href="{{ "/assets/css/sylesheet.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "/assets/css/stylesheet.css" | prepend: site.baseurl }}">
   <!--[if lt IE 9]>
     <script type="text/javascript" src="/assets/js/html5shiv.min.js"></script>
     <script type="text/javascript" src="/assets/js/respond.min.js"></script>
