--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -11,7 +11,7 @@
                 {% include content.html %}
 
                 {% for part in site.parts %}
-                {% if part.categories == 'frame' %}
+                {% if part.category == 'frame' %}
                 {{ part.title }}
                 {% endif %}
                 {% endfor %}
