--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
 <footer>
-  Bikepedia is maintained by <a href="https://github.com/jandetlefsen">jandetlefsen</a><br>
+  <!-- Bikepedia is maintained by <a href="https://github.com/jandetlefsen">jandetlefsen</a><br> -->
 </footer>
